--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -11,11 +11,11 @@ tasks:
       - test -f main.go
       - test "$(basename $(pwd))" != "cdk"
     cmds:
-      - GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -tags lambda.norpc -ldflags="-s -w" -o ./dist/bootstrap main.go
+      - GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -tags lambda.norpc -ldflags="-s -w" -o ./dist/bootstrap
   build-dev:
     dir: '{{.USER_WORKING_DIR}}'
     cmds:
-      - GOOS=linux GOARCH=arm64 go build -o ./dist/bootstrap main.go
+      - GOOS=linux GOARCH=arm64 go build -o ./dist/bootstrap
   watch:
     dir: '{{.USER_WORKING_DIR}}'
     cmds:
