--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -26,6 +26,12 @@ tasks:
     cmds:
       - cdk synth --no-staging --quiet
       - sam local start-api -t ./cdk.out/PRRemindStack.template.json
+  start-workers:
+    dotenv: ['{{.ROOT_DIR}}/local/.env']
+    dir: cdk
+    cmds:
+      - cdk synth --no-staging --quiet
+      - sam local start-lambda -t ./cdk.out/PRRemindStack.template.json
   deploy:
     cmds:
       - cd slackwebhook && task build
