--- a/local/.env.example
+++ b/local/.env.example
@@ -1,1 +1,6 @@
 NEW_MESSAGE_QUEUE_URL=https://...
+STATE_MACHINE_ARN=arn:aws:states:us-east-1:...
+TIMEZONE=America/New_York
+DAYS=1,2,3,4
+START_TIME=8:0
+PR_APPROVAL_WAIT_MINUTES=2880
