Refactor start-api and start-lambda commands in Taskfile.yml to use the correct stack template file name

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -30,13 +30,13 @@ tasks:
     dir: cdk
     cmds:
       - cdk synth --no-staging --quiet
-      - sam local start-api -t ./cdk.out/PRRemindStack.template.json
+      - sam local start-api -t ./cdk.out/PRReminderStack.template.json
   start-workers:
     dotenv: ['{{.ROOT_DIR}}/local/.env']
     dir: cdk
     cmds:
       - cdk synth --no-staging --quiet
-      - sam local start-lambda -t ./cdk.out/PRRemindStack.template.json
+      - sam local start-lambda -t ./cdk.out/PRReminderStack.template.json
   deploy:
     cmds:
       - task build-all
